--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.2
-	yarn_mappings=1.15.2+build.15
-	loader_version=0.8.2+build.194
+	minecraft_version=1.16.4
+	yarn_mappings=1.16.4+build.9
+	loader_version=0.11.1
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = net.fabricmc
-	archives_base_name = fabric-example-mod
+	mod_version = 0.0.1
+	maven_group = lava-sponge
+	archives_base_name = lava-sponge
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.5.1+build.294-1.15
+	fabric_version=0.29.3+1.16
